# financial-portfolio-lakehouse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  note.md  pipeline.defaults.yaml  pipeline.example.yaml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/hooks/: block-dotenv-reads.py  block-main-writes.py  block-main-writes.sh  block-secret-access.sh  test_block_dotenv_reads.py
.github/scripts/: format_log_events.py  parse_stepfunctions_event.py
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  pipeline.yml
docs/: architecture.md  configuration.md  roadmap-cdc-tables.md  roadmap-productionization.md  roadmap-standardize-silver-schema.md  roadmap-xtb-cloud-upload.md  table-lineage.md
docs/adr/: 0001-disable-pytest-cache-provider.md  0002-add-consolidate-step-and-fix-duplicates.md  0002-use-broker-native-identifiers-in-portfolio-report.md  0003-medallion-architecture.md  0004-pipeline-bugfixes.md  0005-pipeline-e2e-bugfixes-round2.md  (+94 more)
examples/: query-local.ipynb  query-s3.ipynb
infra/: .gitignore  main.tf  outputs.tf
pipeline/: __init__.py  config.py  crypto.py  keygen.py  paths.py  query.py  run.py  s3.py  secrets.py  sfn.py  storage.py
scripts/: ibkr_net_worth.py  migrate_drop_account_id.py  migrate_drop_conid.py  migrate_rename_currency_columns.py  portfolio_connectors.py  portfolio_percentages.py  run_prod_pipeline.py  trading212_net_worth.py  xtb_net_worth.py
terraform/: .gitignore  backend.tf.sample  main.tf
tests/: __init__.py  conftest.py  local_backend.py  test_allocate_pipeline.py  test_cdc_analytics.py  test_charts.py  test_config.py  test_connector_protocol.py  test_connector_registry.py  test_consolidate.py  test_consolidate_cdc.py  test_consolidate_pipeline.py  test_crypto.py  test_ibkr_connector.py  test_ibkr_net_worth.py  test_live_fx.py  test_mode.py  test_normalize_currency.py  test_pipeline_integration.py  test_portfolio_holdings.py  test_portfolio_percentages.py  test_quality.py  test_query_cli.py  test_query_list_tables.py  test_query_s3.py  test_report.py  test_run_subcommands.py  test_s3_helpers.py  test_secrets.py  test_sfn.py  test_storage_config.py  test_trading212_connector.py  test_trading212_net_worth.py  test_transform_pipeline.py  test_transform_utils.py  test_xtb_connector.py  test_xtb_net_worth.py
(+108 files in other folders)
