[project]
name = "investment-portfolio-dashboard"
version = "0.2.0"
requires-python = ">=3.11"

[project.optional-dependencies]
pipeline = [
    "deltalake==1.6.0",
    "duckdb==1.5.4",
    "cryptography==49.0.0",
    "pyarrow==24.0.0",
    "polars==1.42.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest==9.1.1",
    "ruff>=0.11.0",
    "investment-portfolio-dashboard[pipeline]",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88