[project]
name = "financial-portfolio-lakehouse"
version = "0.2.0"
requires-python = ">=3.11"

[project.optional-dependencies]
pipeline = [
    "deltalake==1.6.0",
    "duckdb==1.5.4",
    "cryptography==49.0.0",
    "pyarrow==24.0.0",
    "polars==1.42.0",
    "python-dotenv>=1.0.0",
    "tzdata; sys_platform == 'win32'",
    "jinja2>=3.1.0",
    "plotly==6.2.0",
    # boto3 is used by pipeline/sfn.py to trigger Step Functions executions
    # (start_execution/describe_execution/get-execution-history), resolve ECS
    # task definition ARNs, and fetch CloudWatch container logs on failure.
    "boto3==1.37.0",
]
dev = [
    "ipykernel>=6.0.0",
    "pytest==9.1.1",
    "ruff>=0.11.0",
    "pyright>=1.1.0",
    "financial-portfolio-lakehouse[pipeline]",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88